# transaction

./: .bzrignore  .coveragerc  .gitignore  .meta.toml  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  CHANGES.txt  COPYRIGHT.txt  MANIFEST.in  README.rst  README.txt  bootstrap.py  buildout.cfg  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: Makefile  api.rst  conf.py  convenience.rst  datamanager.rst  developer.rst  doom.rst  hooks.rst  index.rst  integrations.rst  make.bat  resourcemanager.rst  savepoint.rst  sqlalchemy.rst
src/transaction/: __init__.py  _compat.py  _manager.py  _transaction.py  interfaces.py  weakset.py
src/transaction/tests/: common.py  examples.py  savepointsample.py  test__manager.py  test__transaction.py  test_savepoint.py  test_weakset.py
transaction/: __init__.py  _compat.py  _manager.py  _transaction.py  compat.py  interfaces.py  weakset.py
transaction/tests/: SampleDataManager.py  common.py  convenience.txt  doom.txt  examples.py  sampledm.py  savepoint.txt  savepointsample.py  test_SampleDataManager.py  test_SampleResourceManager.py  test__manager.py  test__transaction.py  test_attempt.py  test_manager.py  test_register_compat.py  test_savepoint.py  test_transaction.py  test_weakset.py
zope/: __init__.py
zope/transaction/: TimeStamp.c  _transaction.py
zope/transaction/tests/: sampledm.py  savepointsample.py  test_register_compat.py  test_savepoint.py  test_timestamp.py  test_weakset.py
