# Generated with zope.meta (https://zopemeta.readthedocs.io/) from:
# https://github.com/zopefoundation/meta/tree/master/src/zope/meta/pure-python
[build-system]
requires = [
    "setuptools >= 78.1.1,< 81",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "transaction"
version = "5.1.dev0"
description = "Transaction management for Python"
license = "ZPL-2.1"
classifiers = [
    "Development Status :: 6 - Mature",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Framework :: ZODB",
]
dynamic = ["readme"]
requires-python = ">=3.10"
authors = [
    {name = "Zope Foundation and contributors",email = "zodb-dev@zope.dev"},
]
maintainers = [
    {name = "Plone Foundation and contributors",email = "zope-dev@zope.dev"},
]
dependencies = ["zope.interface"]

[project.optional-dependencies]
docs = [
    "Sphinx",
    "repoze.sphinx.autointerface",
]
testing = ["coverage"]

[project.urls]
Documentation = "https://transaction.readthedocs.io/"
Source = "https://github.com/zopefoundation/transaction"
Issues = "https://github.com/zopefoundation/transaction/issues"
Changelog = "https://raw.githubusercontent.com/zopefoundation/transaction/master/CHANGES.rst"


[tool.coverage.run]
branch = true
source = ["transaction"]

[tool.coverage.report]
fail_under = 99
precision = 2
ignore_errors = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "except ImportError:",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "self.fail",
    "raise AssertionError",
    "raise unittest.Skip",
]

[tool.coverage.html]
directory = "parts/htmlcov"

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CHANGES.rst"]}

